adjust layout file name

--- a/example/AntDesign.Pro.Layout.Wasm/Shared/BasicLayout.razor
+++ b/example/AntDesign.Pro.Layout.Wasm/Shared/BasicLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<BasicLayout
+<ProLayout
     Logo="@("https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg")"
     MenuData="MenuData"
     Theme="MenuTheme.Light">
@@ -28,7 +28,7 @@
     <ChildContent>
         @Body
     </ChildContent>
-</BasicLayout>
+</ProLayout>
 <SettingDrawer />
 
 @inject HttpClient HttpClient
