--- a/src/AntDesign.Pro.Layout/GlobalHeader/GlobalHeader.razor.less
+++ b/src/AntDesign.Pro.Layout/GlobalHeader/GlobalHeader.razor.less
@@ -1,5 +1,5 @@
 @import '~antd/es/style/themes/default.less';
-@import '../BasicLayout.razor.less';
+@import '../ProLayout.razor.less';
 
 @pro-layout-global-header-prefix-cls: ~'@{ant-prefix}-pro-global-header';
 
