--- a/src/AntDesign.Pro.Layout/SiderMenu/SiderMenuWrapper.razor.less
+++ b/src/AntDesign.Pro.Layout/SiderMenu/SiderMenuWrapper.razor.less
@@ -1,5 +1,5 @@
 @import '~antd/es/style/themes/default.less';
-@import '../BasicLayout.razor.less';
+@import '../ProLayout.razor.less';
 
 @pro-layout-sider-menu-prefix-cls: ~'@{ant-prefix}-pro-sider';
 
