--- a/example/AntDesign.Pro.Layout.Wasm/Components/GlobalHeaders/RightContent.razor
+++ b/example/AntDesign.Pro.Layout.Wasm/Components/GlobalHeaders/RightContent.razor
@@ -40,6 +40,7 @@
     <SpaceItem>
         <AvatarDropdown
             Name="Serati Ma"
+            MenuItems="@_avatarMenuItems"
             Avatar="https://gw.alipayobjects.com/zos/antfincdn/XAosXuNZyF/BiazfanxmamNRoxxVxka.png"
             OnItemSelected="OnUserItemSelected"/>
     </SpaceItem>
