--- a/src/NoticeIcon/NoticeIcon.razor
+++ b/src/NoticeIcon/NoticeIcon.razor
@@ -14,11 +14,11 @@
             </CascadingValue>
         </Tabs>
     </Overlay>
-    <ChildContent>
-        <span class="@ClassMapper.Class">
+    <Unbound>
+        <span @ref="@context.Current" class="@ClassMapper.Class">
             <Badge Count="Count" Style="box-shadow: none;" Class="badge">
                 <Icon Type="bell" Theme="outline" />
             </Badge>
         </span>
-    </ChildContent>
+    </Unbound>
 </Dropdown>
