--- a/src/BasicLayout.razor
+++ b/src/BasicLayout.razor
@@ -26,7 +26,7 @@
             @if (HeaderRender && Pure)
             {
                 <CascadingValue Value="RightContentRender" Name="RightContentRender">
-                    <HeaderView Logo="Logo" MenuData="MenuData" />
+                    <HeaderView Logo="Logo" MenuData="MenuData" Title="@Title"/>
                 </CascadingValue>
             }
 
