Adjustments needed for driver's schedule app

--- a/example/AntDesign.Pro.Layout.Wasm/Pages/Admin.razor
+++ b/example/AntDesign.Pro.Layout.Wasm/Pages/Admin.razor
@@ -6,7 +6,7 @@
         <Alert 
             Message="umi ui 现已发布，欢迎使用 npm run ui 启动体验。"
             Type="success"
-            ShowIcon
+            ShowIcon="true"
             Banner
             Style="margin: -12px; margin-bottom: 48px;"/>
         <Title Level="2" Style="text-align: center;">
