--- a/example/AntDesign.Pro.Layout.Wasm/Pages/Welcome.razor
+++ b/example/AntDesign.Pro.Layout.Wasm/Pages/Welcome.razor
@@ -6,7 +6,7 @@
         <Alert
             Message="umi ui 现已发布，点击右下角 umi 图标即可使用"
             Type="success"
-            ShowIcon
+            ShowIcon="true"
             Banner
             Style="margin: -12px; margin-bottom: 24px"/>
         <Text Strong>
