--- a/src/NoticeIcon/NoticeIcon.razor
+++ b/src/NoticeIcon/NoticeIcon.razor
@@ -2,7 +2,7 @@
 @inherits AntDomComponentBase
 
 <Dropdown 
-    Placement="@PlacementType.BottomRight"
+    Placement="@Placement.BottomRight"
     OverlayClassName="container popover"
     Trigger="_trigger"
     Visible="Visible"
