--- a/src/PageContainer/PageContainer.razor
+++ b/src/PageContainer/PageContainer.razor
@@ -52,7 +52,7 @@
                         @foreach (var pane in TabList)
                         {
                             <TabPane Key="@pane.Key">
-                                <Tab>@pane.Tab</Tab>
+                                <TabTemplate>@pane.Tab</TabTemplate>
                             </TabPane>
                         }
                     </Tabs>
