--- a/src/SelectLang/SelectLang.razor
+++ b/src/SelectLang/SelectLang.razor
@@ -2,7 +2,7 @@
 @inherits AntDomComponentBase
 
 <Dropdown Style="display: inherit; width: inherit;"
-          Placement="PlacementType.BottomRight"
+          Placement="Placement.BottomRight"
           OverlayClassName="container">
     <Overlay>
         <Menu Class="menu" OnMenuItemClicked="OnItemSelected" DefaultSelectedKeys="@(new[] { SelectedLocale })">
