--- a/src/SettingDrawer/SettingDrawer.razor
+++ b/src/SettingDrawer/SettingDrawer.razor
@@ -77,7 +77,7 @@
                     Type="warning"
                     Message="Setting panel shows in development environment only, please manually modify" 
                     Icon="_notification"
-                    ShowIcon
+                    ShowIcon="true"
                     Style="margin-bottom: 16px;"/>
             }
             
