Fixes to mobile application menu

--- a/src/SiderMenu/BaseMenu.razor
+++ b/src/SiderMenu/BaseMenu.razor
@@ -7,8 +7,7 @@
     Theme="NavTheme"
     Style="@Style"
     Class="@ClassMapper.Class"
-    OnOpenChange="SetOpenKeys"
-    InlineCollapsed="Collapsed">
+    OnOpenChange="SetOpenKeys">
     @menuItemTemplate((MenuData, false))
 </Menu>
 
