--- a/src/BasicLayout.razor
+++ b/src/BasicLayout.razor
@@ -12,12 +12,14 @@
             else
             {
                 <CascadingValue Value="MenuExtraRender" Name="MenuExtraRender">
+                    <CascadingValue Value="Collapsed" Name="Collapsed">
                         <SiderMenu
                             MenuData="MenuData"
                             Mode="Mode"
                             Logo="Logo"
                             OnCollapse="HandleCollapse">
                         </SiderMenu>
+                    </CascadingValue>
                 </CascadingValue>
             }
         }
